hphp/hack/test/typecheck/reactive/rx_mutable1.php.exp
File "rx_mutable1.php", line 6, characters 8-25:
Single argument to \HH\Rx\mutable should be an expression that yields new mutably-owned value, like 'new A()', Hack collection literal or 'f()' where f is function annotated with <<__MutableReturn>> attribute. (Typing[4243])
