hphp/hack/test/typecheck/reactive/rx_mutable1.php
<?hh // strict

<<__Rx>>
function f(int $a): void {
  // ERROR
  $b = \HH\Rx\mutable($a);
}
